kubernetes/apps/security/secrets/vault/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Vault
    gethomepage.dev/description: Secrets Management
    gethomepage.dev/group: Security
    gethomepage.dev/icon: vault.png
spec:
  hostnames:
  - "vault.${DOMAIN1}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault
          port: 8200
